<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Autobudget</string>
    <string name="action_settings">Settings</string>
    <string name="txt_btn_show">Show</string>
    <string name="txt_from_date">Show from:</string>
    <string name="txt_qiwi">QIWI</string>
    <string name="txt_products">Products</string>
    <string name="txt_sport">Sport</string>
    <string name="txt_cash_withdraw">Cash</string>
    <string name="txt_other">Other</string>
    <string name="txt_cafe">Cafe</string>
    <string name="txt_transport">Transport</string>
    <string name="txt_clothes">Clothes</string>
    <string name="txt_relax">Relax</string>
    <string name="txt_pattern">Pattern</string>
    <string name="txt_category">Category</string>
    <string name="txt_cur_category">Current category:</string>
    <string name="txt_category_pattern">Category pattern</string>
    <string name="txt_pharmacy">Pharmacy</string>
    <string name="txt_total">Total:</string>
    <string name="txt_change_category_to">Change to:</string>
    <string name="txt_only_this_msg">Only this message</string>
    <string name="txt_all_from_source">All from this source</string>
    <string name="add_new_category">Add new category</string>
    <string name="add">Add</string>
    <string name="delete_category">Delete category</string>
    <string name="create_category_title">Create category</string>
    <string name="cancel">Cancel</string>
    <string name="edit_category">Edit category</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="edit_category_title">Edit category name</string>
    <string name="category_exists">Category already exists</string>
    <string name="ok">Ok</string>
    <string name="txt_can_not_change_category_pattern">Category %s can not be changed</string>
    <string name="category_name_empty_alarm">Category name can\'t be empty string</string>
    <string name="delete_category_dialog_msg">Are you sure?</string>
    <string name="delete_category_dialog_title_template">Delete category \'%s\'</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="date_filter_array">
        <item>Last week</item>
        <item>Last month</item>
        <item>Last 6 months</item>
        <item>Last year</item>
        <item>All time</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_hide_empty_categories">Hide empty categories</string>
    <string name="pref_description_hide_empty_categories">Category which doesn\'t have any items for specified period is empty.
    </string>


</resources>
