<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0">

        <TextView
            android:id="@+id/lblFullMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="test_test_test_test_test_test_test_test_test_test_test_test_test" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/lblTextCurrentCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cur_category"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/lblCurCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_change_category_to"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:layout_gravity="center_vertical" />

            <RelativeLayout
                android:background="@color/background_material_light"
                android:layout_gravity="center">

                <Spinner
                    android:id="@+id/spinnerCategories"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLargePopupMenu" />
            </RelativeLayout>


        </GridLayout>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/radio_only_this_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txt_only_this_msg" />

            <RadioButton
                android:id="@+id/radio_all_from_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_all_from_source" />
        </RadioGroup>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/btnEditOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>