<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblFullMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/txt_pattern"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/editPattern"
            android:inputType="text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/txt_category"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/lblCategoryPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/txt_category_pattern"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editCategoryPattern"
        android:textColor="#000000"
        android:inputType="textMultiLine"
        android:ellipsize="none"
        android:scrollHorizontally="false"
        android:maxLines="20"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:singleLine="false"/>

    <Button
        android:id="@+id/btnEditOk"
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>